<resources>
    <string name="app_name">Team_sss_Project</string>
    <string name="title_activity_find_map">Map</string>

    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="nick">닉네임</string>
    <string name="pw2">비밀번호 확인</string>

    <string name="sign_ok">가입완료</string>
    <string name="sign">가입하기</string>
    <string name="back">뒤로</string>
    <string name="cancel">취소</string>
    <string name="logout">로그아웃</string>
    <string name="modify">수정</string>
    <string name="setting">환경설정</string>
    <string name="complete">완료</string>
    <string name="my">내 정보</string>
    <string name="search">검색</string>


    <string name="search_sc">제목 + 내용</string>
    <string name="search_s">제목만</string>
    <string name="search_i">글 작성자</string>

    <string name="freeboard">자유 게시판</string>
</resources>
