<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="#ffffff">


    <RelativeLayout
        android:id="@+id/rl_memberbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/iv_member_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/memberpic_null" />


        <TextView
            android:id="@+id/tv_member_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_member_pic"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rl_memberbox"
        android:background="@color/gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/line">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_r_message"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/drawer_button_select"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="받은 쪽지함"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_w_message"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/drawer_button_select"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="보낸 쪽지함"
                    android:textSize="15sp" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />


            <RelativeLayout
                android:id="@+id/rl_picBoard"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/drawer_button_select"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="멍뭉냥냠 자랑"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_freeBoard"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/drawer_button_select"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/freeboard"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_parcelBoard"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/drawer_button_select"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="분양 게시판"
                    android:textSize="15sp" />
            </RelativeLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <RelativeLayout
                android:id="@+id/rl_my"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/drawer_button_select"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/iv_my"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_my" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/iv_my"
                    android:text="@string/my"
                    android:textSize="15sp" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_setting"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/drawer_button_select"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/iv_setting"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_settings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/iv_setting"
                    android:text="@string/setting"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_logout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/drawer_button_select"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/iv_logout"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_logout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/iv_logout"
                    android:text="@string/logout"
                    android:textSize="15sp" />
            </RelativeLayout>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>
